permgen on oracle jdk 7 on travis